Set the width to some columns of the logs table to prevent layout jumps

--- a/ActivityTrackerServer/frontend/activity-tracker-gui/src/app/user-logs/user-logs.component.scss
+++ b/ActivityTrackerServer/frontend/activity-tracker-gui/src/app/user-logs/user-logs.component.scss
@@ -45,3 +45,11 @@
 table {
     width: 100%;
 }
+
+.mat-column-userSessionId {
+    width: 40%;;
+}
+
+.mat-column-endpoint {
+    width: 30%;
+}
